# personal-health-record

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/declarations/internet_identity/: internet_identity.did.d.ts
src/declarations/personal-health-record-backend/: index.d.ts  index.js  personal-health-record-backend.did.d.ts  personal-health-record-backend.did.js
src/declarations/personal-health-record-frontend/: index.d.ts  index.js
src/personal-health-record-backend/: Cargo.toml  personal-health-record-backend.did  personal-health-record-backend.did.js
src/personal-health-record-backend/src/: lib.rs  storage.rs  types.rs
src/personal-health-record-frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
src/personal-health-record-frontend/src/: App.jsx  index.scss  main.jsx
src/personal-health-record-frontend/src/components/: AddRecord.tsx  RecordList.tsx  ShareRecord.tsx  ShareRequestlist.tsx  dashboard.tsx
src/personal-health-record-frontend/src/services/: api.ts
src/personal-health-record-frontend/src/types/: index.ts
