[package]
name = "personal-health-record-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9"
ic-cdk = "0.10"
ic-cdk-macros = "0.7"
serde = { version = "1.0", features = ["derive"] }

# Remove uuid dependency since it's causing getrandom issues
# uuid = { version = "1.0", features = ["v4"] }

[dependencies.getrandom]
version = "0.2"
features = ["custom"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"