[package]
name = "personal-health-record-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
candid = "0.10.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Remove getrandom from main dependencies - let ic-cdk handle it
# Or use version 0.2 if you need it explicitly
getrandom = { version = "0.2", features = ["custom"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }